# spiking-neural-network

./: .gitignore  .gitmodules  CMakeLists.txt  README.txt  default_network_driver.txt  default_network_driver_simple.txt  driver_def.txt  notes.txt
data/: complex_track.txt  simple_track.txt
drivers_by_generation/1/: default_network_driver.txt
drivers_by_generation/3468/: default_network_driver.txt
generations/: default.txt
results/drivers_by_generation/: default_network_driver_5252.txt  default_network_driver_67.txt  default_network_driver_complex.txt
results/drivers_by_generation/159/: default_network_driver.txt
results/drivers_by_generation/649/: default_network_driver.txt
src/: ApplicationManager.cpp  ApplicationManager.hpp  CMakeLists.txt  Common.hpp  DebugDrawOpenGL.cpp  DebugDrawOpenGL.hpp  Exceptions.hpp  Framework.cpp  Framework.hpp  Game.cpp  Game.hpp  IApplicationController.hpp  ImpulsePlot.cpp  ImpulsePlot.hpp  NeuralNetworkController.cpp  NeuralNetworkController.hpp  NeuronImpulseHandler.cpp  NeuronImpulseHandler.hpp  NeuronInput.cpp  NeuronInput.hpp  PhysicsCar.cpp  PhysicsCar.hpp  PhysicsContacts.cpp  PhysicsContacts.hpp  PhysicsFixtureUserData.hpp  PhysicsTire.cpp  PhysicsTire.hpp  PlotImpulseHandle.cpp  PlotImpulseHandle.hpp  PlotImpulseHandlerProxy.cpp  PlotImpulseHandlerProxy.hpp  PlotOpenGL.cpp  PlotOpenGL.hpp  SimulationWorld.cpp  SimulationWorld.hpp  SpikingNeuron.cpp  SpikingNeuron.hpp  Sprite.cpp  Sprite.hpp  TestEnvironment.hpp  (+5 more)
src/DE/: DIfferentialEvolution.cpp  DifferentialEvolution.cpp  DifferentialEvolution.hpp
src/Framework/: DebugDrawOpenGL.cpp  DebugDrawOpenGL.hpp  Framework.cpp  Framework.hpp  Sprite.cpp  Sprite.hpp
src/Plots/: ImpulsePlot.cpp  ImpulsePlot.hpp  ImpulsePlotBundle.cpp  ImpulsePlotBundle.hpp  LinePlot.cpp  LinePlot.hpp  PlotRenderer.cpp  PlotRenderer.hpp
src/SNN/: Common.hpp  NeuronInput.cpp  NeuronInput.hpp  SpikingNetwork.cpp  SpikingNetwork.hpp  SpikingNeuron.cpp  SpikingNeuron.hpp
src/Simulation/: PassageEvaluator.cpp  PassageEvaluator.hpp  Track.cpp  Track.hpp  World.cpp
src/Simulation/Physics/: Car.cpp  Car.hpp  Contacts.cpp  Tire.hpp
src/Simulation/Probes/: BaseProbe.cpp  BaseProbe.hpp  CarVelocity.cpp  CarVelocity.hpp  IImpulseHandler.hpp  LeftDistance.cpp  TrackAngle.cpp  TrackAngle.hpp  TrackSide.cpp  TrackSide.hpp
src/simulation/: Track.cpp  Track.hpp  World.cpp  World.hpp
src/simulation/physics/: Car.cpp  Car.hpp  Contacts.hpp  FixtureUserData.hpp  Tire.cpp
src/simulation/probes/: IImpulseHandler.hpp  LeftDistance.cpp  LeftDistance.hpp  TrackDistance.cpp  TrackDistance.hpp
